fix(root view): counters on small screens

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -285,5 +285,7 @@ body {
   .root_counters {
     top: initial;
     bottom: -3px;
+    transform: scale(0.9);
+    right: -3px;
   }
 }
